// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Page should compile 1`] = `
<bc-login-form
  submitted={[Function EventEmitter]}
>
  <div
    class="login"
  >
    <form
      class="login-inner ng-untouched ng-pristine ng-valid"
      novalidate=""
    >
      <img
        class="logo"
        src="../../../public/assets/img/burst_logo.png"
      />
      <span
        class="version"
      >
        
      </span>
      <mat-form-field
        appearance="outline"
      >
        <mat-label>
          Enter passphrase
        </mat-label>
        <input
          class="ng-untouched ng-pristine ng-valid"
          matinput=""
          name="passphrase"
          ng-reflect-name="passphrase"
          ng-reflect-required=""
          placeholder="Enter passphrase"
          required=""
          type="password"
        />
        
        <mat-error>
          
        </mat-error>
        
      </mat-form-field>
      <button
        aria-label="Submit"
        disabled=""
        mat-button=""
      >
        Submit
      </button>
    </form>
  </div>
</bc-login-form>
`;

exports[`Login Page should disable the form if pending 1`] = `
<bc-login-form
  pending={[Function Boolean]}
  submitted={[Function EventEmitter]}
>
  <div
    class="login"
  >
    <form
      class="login-inner ng-untouched ng-pristine ng-valid"
      novalidate=""
    >
      <img
        class="logo"
        src="../../../public/assets/img/burst_logo.png"
      />
      <span
        class="version"
      >
        
      </span>
      <mat-form-field
        appearance="outline"
      >
        <mat-label>
          Enter passphrase
        </mat-label>
        <input
          class="ng-untouched ng-pristine ng-valid"
          matinput=""
          name="passphrase"
          ng-reflect-name="passphrase"
          ng-reflect-required=""
          placeholder="Enter passphrase"
          required=""
          type="password"
        />
        
        <mat-error>
          
        </mat-error>
        
      </mat-form-field>
      <button
        aria-label="Submit"
        disabled=""
        mat-button=""
      >
        Submit
      </button>
    </form>
  </div>
</bc-login-form>
`;

exports[`Login Page should display an error message if provided 1`] = `
<bc-login-form
  errorMessage={[Function String]}
  submitted={[Function EventEmitter]}
>
  <div
    class="login"
  >
    <form
      class="login-inner ng-untouched ng-pristine ng-valid"
      novalidate=""
    >
      <img
        class="logo"
        src="../../../public/assets/img/burst_logo.png"
      />
      <span
        class="version"
      >
        
      </span>
      <mat-form-field
        appearance="outline"
      >
        <mat-label>
          Enter passphrase
        </mat-label>
        <input
          class="ng-untouched ng-pristine ng-valid"
          matinput=""
          name="passphrase"
          ng-reflect-name="passphrase"
          ng-reflect-required=""
          placeholder="Enter passphrase"
          required=""
          type="password"
        />
        
        <mat-error>
          Invalid credentials
        </mat-error>
        
      </mat-form-field>
      <button
        aria-label="Submit"
        disabled=""
        mat-button=""
      >
        Submit
      </button>
    </form>
  </div>
</bc-login-form>
`;
